--- a/.gitignore
+++ b/.gitignore
@@ -258,13 +258,23 @@ paket-files/
 # JetBrains Rider
 .idea/
 *.sln.iml
+
 /source.cpp
-/DCJ
-!/DCJ/2015
-!/DCJ/2016
-/TopCoder.jnlp
 /output.txt
 /input.txt
+/TopCoder.jnlp
 /Greed-2.0-RC-7.1.0.jar
-*.exe
-*.o
+
+# ignore DCJ files except my solutions and files I have changed.
+
+/DCJ/*
+!/DCJ/dcj.py
+!/DCJ/config.json
+!/DCJ/dcj
+/DCJ/dcj/*
+!/DCJ/dcj/command_chooser.py
+!/DCJ/dcj/configuration.py
+!/DCJ/2015
+!/DCJ/2016
+/DCJ/2015/*.h
+/DCJ/2016/*.h
