--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3749,6 +3749,9 @@
     <ClCompile Include="UVa\10900\10927.cpp">
       <Filter>UVa\10900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10900\10963.cpp">
+      <Filter>UVa\10900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
