--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3758,6 +3758,12 @@
     <ClCompile Include="UVa\10000\10061.cpp">
       <Filter>UVa\10000\10060</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12500\12541.cpp">
+      <Filter>UVa\12500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\10800\10842.cpp">
+      <Filter>UVa\10800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
