--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3812,6 +3812,9 @@
     <ClCompile Include="UVa\13100\13140.cpp">
       <Filter>UVa\13100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10054.cpp">
+      <Filter>UVa\10000\10050</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
