--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3818,6 +3818,9 @@
     <ClCompile Include="UVa\10000\10092.cpp">
       <Filter>UVa\10000\10090</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12800\12854.cpp">
+      <Filter>UVa\12800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
